--- a/RecycleViewDemo/app/src/main/res/layout/activity_universal_adapter.xml
+++ b/RecycleViewDemo/app/src/main/res/layout/activity_universal_adapter.xml
@@ -5,20 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.UniversalAdapterActivity">
+
     <Button
-        android:id="@+id/bt_adapter"
+        android:id="@+id/bt_displaydata"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="跳转到万能适配器的使用情况 " />
-    <Button
-        android:id="@+id/bt_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="获取list数据" />
+        android:text="展示数据" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycle"
+        android:id="@+id/rv_displaydata"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
