--- a/RecycleViewDemo/app/src/main/res/layout/activity_main.xml
+++ b/RecycleViewDemo/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,12 @@
         android:text="跳转到万能适配器的使用情况 " />
 
     <Button
+        android:id="@+id/bt_getMoveAndSwipActivity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="跳转到移动侧滑的activity " />
+
+    <Button
         android:id="@+id/bt_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
