--- a/RecycleViewDemo/app/src/main/res/layout/activity_fresh_item.xml
+++ b/RecycleViewDemo/app/src/main/res/layout/activity_fresh_item.xml
@@ -5,39 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.MainActivity">
-
+    tools:context=".ui.FreshItemActivity">
     <Button
-        android:id="@+id/bt_adapter"
+        android:id="@+id/bt_swip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="跳转到万能适配器的使用情况 " />
-
-    <Button
-        android:id="@+id/bt_getMoveAndSwipActivity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="跳转到移动侧滑的activity " />
-
-    <Button
-        android:id="@+id/bt_freshActivity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="跳转到刷新的activity " />
-
-    <Button
-        android:id="@+id/bt_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="获取list数据" />
-
+        android:text="展示数据"/>
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycle"
+            android:id="@+id/rv_swipRefresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
